fix: Button groups on mobile appearing outside of container

--- a/src/qabox.css
+++ b/src/qabox.css
@@ -1,6 +1,6 @@
 .qabox {
     width: 100%;
-    height: 7.5%;
+    height: 5%;
     margin-bottom: 2vh;
     background-color: #363636;
     color: #EEEEEE;
@@ -12,13 +12,25 @@
 .answerbox{
     margin-top: auto;
     margin-bottom: auto;
+    margin-right: auto;
+    margin-left: auto;
+
     width: 25% !important;
+}
+
+.answerbox-answer{
+    height: auto;
+    flex-grow: 0.5 !important;
+    width: 25%  !important;
+    padding-left: auto;
+    padding-right : auto;
+    font-size: 1.25vh !important;
 }
 
 .qaboxText{
     margin-top: auto;
     margin-bottom: auto;
-    font-size: 2vh;
+    font-size: 1.25vh;
     width: 75%;
 }
 
